--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-neutral-900 text-white font-sans">
+<html lang="en" class="bg-neutral-100 text-neutral-800 font-sans">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -21,10 +21,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>WeatherWise.ai</title>
   </head>
-  <body>
-    <div id="root" class="h-lvh"></div>
+  <body class="flex justify-center min-h-screen bg-gradient-to-t from-sky-300">
+    <div id="root" class="my-auto mx-0 px-4 w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
