refactor: Update max width of root element in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>WeatherWise.ai</title>
   </head>
   <body class="flex justify-center min-h-screen bg-gradient-to-t from-sky-300">
-    <div id="root" class="my-auto mx-0 px-4 w-full"></div>
+    <div id="root" class="my-auto mx-0 px-4 w-full max-w-screen-lg"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
