refactor: Update index.html with dark mode support and improved loading state user experience

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-neutral-100 text-neutral-800 font-sans">
+<html
+  lang="en"
+  class="bg-neutral-100 dark:bg-sky-800 text-neutral-800 dark font-sans"
+>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -23,7 +26,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherWise.ai</title>
   </head>
-  <body class="flex justify-center min-h-screen bg-gradient-to-t from-sky-300">
+  <body
+    class="flex justify-center min-h-screen bg-gradient-to-t from-sky-300 dark:from-sky-950"
+  >
     <div id="root" class="my-auto mx-0 px-4 w-full max-w-screen-lg"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
