--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
   lang="en"
-  class="bg-neutral-100 dark:bg-sky-800 text-neutral-800 dark font-sans"
+  class="bg-neutral-100 dark:bg-sky-800 text-neutral-800 font-sans transition-colors duration-500"
 >
   <head>
     <meta charset="UTF-8" />
