--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>WeatherWise.ai</title>
   </head>
   <body
-    class="flex justify-center min-h-screen bg-gradient-to-t from-sky-300 dark:from-sky-950"
+    class="relative flex justify-center min-h-screen bg-gradient-to-t from-sky-300 dark:from-sky-950"
   >
     <div id="root" class="my-auto mx-0 px-4 w-full max-w-screen-lg"></div>
     <script type="module" src="/src/main.tsx"></script>
