refactor: Update root div styling for better responsiveness

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   <body
     class="relative flex justify-center min-h-screen bg-gradient-to-t from-sky-300 dark:from-sky-950"
   >
-    <div id="root" class="my-auto mx-0 px-4 w-full max-w-screen-lg"></div>
+    <div
+      id="root"
+      class="my-auto mx-0 px-4 sm:px-8 lg:px-4 w-full max-w-screen-lg"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
