refactor: Update meta tags and add favicon for WeatherWise.ai

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
 >
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="description"
+      content="Weather App which will always make you stay up to date with weather. Connected with AI it's event wiser now!"
+    />
+    <meta property="og:type" content="application" />
+    <meta property="og:title" content="WeatherWise.ai - Weather App" />
+
+    <meta
+      property="og:description"
+      content="Weather App which will always make you stay up to date with weather. Connected with AI it's event wiser now!"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/share.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -23,8 +35,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeatherWise.ai</title>
+    <title>WeatherWise.ai - Weather App</title>
   </head>
   <body
     class="relative flex justify-center min-h-screen bg-gradient-to-t from-sky-300 dark:from-sky-950"
