refactor: Update meta tags and link URLs in index.html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       property="og:description"
       content="Weather App which will always make you stay up to date with weather. Connected with AI it's event wiser now!"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/share.png" />
-    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+    <meta property="og:image" content="/share.png" />
+    <link rel="icon" href="/icon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
