--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       property="og:description"
       content="Weather App which will always make you stay up to date with weather. Connected with AI it's event wiser now!"
     />
-    <meta property="og:image" content="/share.png" />
+
+    <meta
+      property="og:image"
+      content="https://traczoskar.github.io/ai_weather_app/share.png"
+    />
     <link rel="icon" href="/ai_weather_app/icon.png" />
     <link
       rel="stylesheet"
